# wangxiaodiu.github.io

./: .gitignore  CNAME  README.md  about.html  about.rst  archive.html  contact.html  contact.markdown  contact.md  deploy.sh  index.html  me.html  me.md  mysite.cabal  params.json  publication.html  site.hs
.stack-work/install/x86_64-osx/lts-11.6/8.2.2/flag-cache/: haddock-library-1.4.5-uQdrVGi1uKLD22IlKGc6n  hakyll-4.12.1.0-5wRjinKWxCB1IGbtiTU0FH  myblog-0.1.0.0  pandoc-2.1.2-Gh8Jq7UjhFYJqsNsUjrKar  pandoc-citeproc-0.14.3-2VAiH0sMUauLshxxVriPxV
_site/posts/: 2018-04-26-hello.html
posts/: 2018-04-26-hello.html  2018-04-26-hello.markdown
pubs/: 2017-10-28-Wearable.html  2017-10-28-Wearable.md
templates/: default.html  pub-list.html  pub.html  publication.html
