name:                mysite
version:             0.1.0.0
-- synopsis:
-- description:
author:              Liang Niu
maintainer:          niuliang3@gmail.com
copyright:           2018 Liang Niu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
  ghc-options:      -threaded
  default-language: Haskell2010
